--- a/index.html
+++ b/index.html
@@ -175,18 +175,18 @@
                     <nav>
                         <ul class="social">
                             <li>
-                                <a class="icons" href="#"><img src="images/vector(2).svg"></a></li>
+                                <a class="icons" href="#"><img src="images/vector(2).svg" alt="icons"></a></li>
                                 <li>
-                                    <a class="icons" href="#"><img src="images/Linkedinicon.png"></a>
+                                    <a class="icons" href="#"><img src="images/Linkedinicon.png" alt="icons"></a>
                                 </li>
                                 <li>
-                                    <a class="icons" href="#"><img src="images/vector(3).svg"></a>
+                                    <a class="icons" href="#"><img src="images/vector(3).svg" alt="icons"></a>
                                 </li>
                                 <li>
-                                    <a class="icons" href="#"><img src="images/Vector.svg"></a>
+                                    <a class="icons" href="#"><img src="images/Vector.svg" alt="icons"></a>
                                 </li>
                                 <li>
-                                    <a class="icons" href="#"><img src="images/vector(1).svg"></a>
+                                    <a class="icons" href="#"><img src="images/vector(1).svg" alt="icons"></a>
                                 </li>
                         </ul>
                     </nav>
@@ -210,6 +210,7 @@
                             <li><img src="images/Ellipsecss.png" alt="icons">CSS</li>
                         </div>
                     </ul>
+                    </div>
                     <ul class="fra">
                         <div class="fro"> 
                         <li><h5>Frameworks </h5><i class="fas fa-angle-right"></i></li><hr>
@@ -226,7 +227,7 @@
                     <h1> Contact me</h1>
                     <p>If you have an application you are interested in developing, a feature that you need built 
                         or a project that needs codding. <br> I'd love to help with it.</p>
-                        <form action="url microverse.org">
+                        <form action="https://microverse.org">
                             <ul class="for">
                                 <li>
                                     <label for="name"></label><input type="text" id="name" name="user-name" 
