--- a/index.html
+++ b/index.html
@@ -200,15 +200,9 @@
                     <div class="frame"><h2>Languages</h2><i class="fas fa-angle-down"></i></div>
                     <div class="program">
                         <ul class="pro">
-                            <div class="js"> 
-                            <li><img src="images/Ellipsejs.png" alt="icons"> javascript</li>
-                        </div>
-                        <div class="js"> 
-                            <li><img src="images/Ellipsehtml.png" alt="icons"> HTML</li>
-                        </div>
-                        <div class="js">
-                            <li><img src="images/Ellipsecss.png" alt="icons">CSS</li>
-                        </div>
+                            <li class="js"><img src="images/Ellipsejs.png" alt="icons"> javascript</li>
+                            <li class="js"><img src="images/Ellipsehtml.png" alt="icons"> HTML</li>
+                            <li class="js"><img src="images/Ellipsecss.png" alt="icons">CSS</li>
                     </ul>
                     </div>
                     <ul class="fra">
