--- a/index.html
+++ b/index.html
@@ -204,14 +204,9 @@
                             <li class="js"><img src="images/Ellipsehtml.png" alt="icons"> HTML</li>
                             <li class="js"><img src="images/Ellipsecss.png" alt="icons">CSS</li>
                     </ul>
-                    </div>
                     <ul class="fra">
-                        <div class="fro"> 
-                        <li><h5>Frameworks </h5><i class="fas fa-angle-right"></i></li><hr>
-                    </div>
-                    <div class="fro">
-                        <li><h5>Frameworks </h5><i class="fas fa-angle-right"></i></li><hr>
-                    </div>
+                        <li class="fro"><h5>Frameworks </h5><i class="fas fa-angle-right"></i></li><hr>
+                        <li class="fro"><h5>Frameworks </h5><i class="fas fa-angle-right"></i></li><hr>
                     </ul>
                 </div>
             </section>
