--- a/index.html
+++ b/index.html
@@ -205,12 +205,13 @@
                             <li class="js"><img src="images/Ellipsecss.png" alt="icons">CSS</li>
                     </ul>
                     <ul class="fra">
-                        <li class="fro"><h5>Frameworks </h5><i class="fas fa-angle-right"></i></li><hr>
-                        <li class="fro"><h5>Frameworks </h5><i class="fas fa-angle-right"></i></li><hr>
+                        <li class="fro"><h5>Frameworks </h5><i class="fas fa-angle-right"></i><hr></li>
+                        <li class="fro"><h5>Frameworks </h5><i class="fas fa-angle-right"></i><hr></li>
                     </ul>
                 </div>
+                </div>
             </section>
-
+            
             <section class="seven">
                     <div class="box1"> 
                     <h1> Contact me</h1>
