--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
             <nav>
                 <ul class="social">
                     <li>
-                        <a class="icons" href="#"><img src="images/vector.svg" alt="icons"></a></li>
+                        <a class="icons" href="#"><img src="images/Vector.svg" alt="icons"></a></li>
                         <li>
-                            <a class="icons" href="#"><img src="images/vector(1).svg" alt="icons"></a>
+                            <a class="icons" href="#"><img src="images/Vector(1).svg" alt="icons"></a>
                         </li>
                         <li>
-                            <a class="icons" href="#"><img src="images/vector(2).svg" alt="icons"></a>
+                            <a class="icons" href="#"><img src="images/Vector(2).svg" alt="icons"></a>
                         </li>
                         <li>
-                            <a class="icons" href="#"><img src="images/vector(3).svg" alt="icons"></a>
+                            <a class="icons" href="#"><img src="images/Vector(3).svg" alt="icons"></a>
                         </li>
                 </ul>
             </nav>
@@ -175,18 +175,18 @@
                     <nav>
                         <ul class="social">
                             <li>
-                                <a class="icons" href="#"><img src="images/vector(2).svg" alt="icons"></a></li>
+                                <a class="icons" href="#"><img src="images/Vector(2).svg" alt="icons"></a></li>
                                 <li>
                                     <a class="icons" href="#"><img src="images/Linkedinicon.png" alt="icons"></a>
                                 </li>
                                 <li>
-                                    <a class="icons" href="#"><img src="images/vector(3).svg" alt="icons"></a>
+                                    <a class="icons" href="#"><img src="images/Vector(3).svg" alt="icons"></a>
                                 </li>
                                 <li>
                                     <a class="icons" href="#"><img src="images/Vector.svg" alt="icons"></a>
                                 </li>
                                 <li>
-                                    <a class="icons" href="#"><img src="images/vector(1).svg" alt="icons"></a>
+                                    <a class="icons" href="#"><img src="images/Vector(1).svg" alt="icons"></a>
                                 </li>
                         </ul>
                     </nav>
@@ -205,13 +205,13 @@
                             <li class="js"><img src="images/Ellipsecss.png" alt="icons">CSS</li>
                     </ul>
                     <ul class="fra">
-                        <li class="fro"><h5>Frameworks </h5><i class="fas fa-angle-right"></i><hr></li>
-                        <li class="fro"><h5>Frameworks </h5><i class="fas fa-angle-right"></i><hr></li>
+                        <li class="fro"><h2>Frameworks </h2><i class="fas fa-angle-right"></i></li>
+                        <li class="fro"><h2>Skills </h2><i class="fas fa-angle-right"></i></li>
                     </ul>
                 </div>
                 </div>
             </section>
-            
+
             <section class="seven">
                     <div class="box1"> 
                     <h1> Contact me</h1>
