remove html comments

--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
         <a class="logo"href="#">My Logo</a>
         <nav class="nav">
             <img class="ham" src="images/menu-icon.svg" alt="menu">
-            <!--<ul class="navbar">
+            <ul class="navbar">
                 <li><a class="navlinks" href="#">portfolio</a></li>
                 <li><a class="navlinks" href="#">about</a></li>
-                <li><a class="navlinks"href="#">contact</a></li> 
-            </ul>-->
-    </nav>
+                <li><a class="navlinks"href="#">contact</a></li>
+            </nav>
     </header>
 
     <section class="body">
@@ -216,7 +215,7 @@
                 </section>
                                 <div class="flex-container"> 
                 <section class="contactform1">
-                    <h1>Contact me</h1>
+                    <h2>Contact me</h2>
                     <p>If you have an application you are interested in developing, a feature that you need built or a 
                         project that needs coding. I'd love to help with it </p>
                         <nav>
