made responsive page

--- a/index.html
+++ b/index.html
@@ -51,10 +51,9 @@
     </section>
 
     <section class="project-container">
-        <div class="card-box">
         <div class="project">  
             <div class="my-img"> 
-        <img class="mobile-image" src="images/SnapshootPortfolio.png" alt="picture identity of a lady">
+        <img class="mobile-image" src="images/face-crop-port.png" alt="picture identity of a lady">
         </div>
         <div class="my-text">
         <h2>Tonic</h2>
@@ -68,9 +67,10 @@
         <p>A daily selection of privately<br>
              personalised reads: no accouts or <br>
               sign-ups required. </p><br>
-    <ul>
+    <ul class="show">
         <li>html</li>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
         <li>css</li>
+        <li class="ok">Ruby on rails</li>
         <li>javascrpt</li>
         </ul>
         <button class="active button" type="button"> See Project</button>
@@ -95,9 +95,10 @@
         <p>A daily selection of privately<br>
             personalised reads: no accounts or <br>
             sign-ups required.</p><br>
-            <ul>
+            <ul class="show">
                 <li>html</li>
                 <li>css</li>
+                <li class="ok">Ruby on rails</li>
                 <li>javascrpt</li>
                  </ul>
                  <button type="button" class="button">See Project</button>
@@ -106,7 +107,7 @@
 
         <div class="project">
             <div class="my-img"> 
-        <img class="mobile-image" src="images/SnapshootPortfolio(2).png" alt="picture identity of a lady">
+        <img class="mobile-image" src="images/orange-crop2.png" alt="picture identity of a lady">
         </div>
         <div class="my-text">
         <h2>Tonic</h2>
@@ -121,9 +122,10 @@
                 <p>A daily selection of privately<br>
                 personalised reads: no accounts or <br>
                 sign-ups required.</p><br>
-                <ul>
+                <ul class="show">
                     <li>html</li>
                     <li>css</li>
+                    <li class="ok">Ruby on rails</li>
                     <li>javascrpt</li>
                     </ul>
                     <button type="button" class="button">See Project</button>
@@ -147,9 +149,10 @@
                 <p>A daily selection of privately<br>
                 personalised reads: no accounts or <br>
                 sign-ups required.</p><br>
-                <ul>
+                <ul class="show">
                     <li>html</li>
                     <li>css</li>
+                    <li class="ok">Ruby on rails</li>
                     <li>javascrpt</li>
                 </ul>
                    <button type="button" class="button">See Project</button>
