fixed syntax errrs

--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
     <header class="header"> 
-        <a class="logo"href="#">My Logo</a>
+        <a class="logo" href="#">My Logo</a>
         <nav class="nav">
             <img class="ham" src="images/menu-icon.svg" alt="menu">
             <ul class="navbar">
                 <li><a class="navlinks" href="#">portfolio</a></li>
                 <li><a class="navlinks" href="#">about</a></li>
                 <li><a class="navlinks"href="#">contact</a></li>
+                </ul>
             </nav>
     </header>
 
@@ -35,7 +36,7 @@
                 <a class="social" href="#"><img src="images/Vector.svg" alt="icons"></a>
             </li>
             <li>
-                <a class="social" href="#"><img src="images/Linkedin icon.svg" alt="icons"></a>
+                <a class="social" href="#"><img src="images/Linkedin-icon.svg" alt="icons"></a>
             </li>
             <li>
                 <a  class="social" href="#"><img src="images/Vector(1).svg" alt="icons"></a>
