--- a/index.html
+++ b/index.html
@@ -11,20 +11,31 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+<body>
+
+    <div class="nav3 hide" id="nav3">
+        <div class="sixty"><img class="markx" id="markx" src="images/Icon.png" alt="an x"></div>
+        <ul class="navigation">
+            <li><a class="navlink2" href="#Portfolio">Portfolio</a></li>
+            <li><a class="navlink2" href="#About">About</a></li>
+            <li><a class="navlink2" href="#contact">Contact</a></li>
+        </ul>
+    </div>
     <header class="header"> 
         <a class="logo" href="#">My Logo</a>
         <nav class="nav">
-            <img class="ham" src="images/menu-icon.svg" alt="menu">
+            <img class="ham" id="ham" src="images/menu-icon.svg" alt="menu">
             <ul class="navbar">
                 <li><a class="navlinks" href="#">portfolio</a></li>
                 <li><a class="navlinks" href="#">about</a></li>
                 <li><a class="navlinks" href="#">contact</a></li>
                 </ul>
             </nav>
+
     </header>
 
     <section class="body">
-        <div class="head-cont">
+        <div class="head-cont" id="Portfolio">
              <h1>I'm Emmanuella <br> glad to see  you!</h1>
 
         <p class="desc">I'm a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don't hestiate to contact me.</p>
@@ -50,6 +61,7 @@
         </div>
         
     </section>
+  
 
     <section class="project-container">
         <div class="project">  
@@ -163,7 +175,7 @@
 
 
             <section class="about-container">             
-                <div class="about">
+                <div class="about" id="About">
                  <h2>About<br>Myself</h2>
                 <p> Hello i'm a software developer! I can help <br>you build a product, feature or website <br>look through some of my work and <br> experience! if you like what you see and <br> have a project you need coded, don't <br> hestiate to contact me.
                     <h3>LET'S CONNECT</h3>
@@ -218,7 +230,7 @@
                     </div>
                 </section>
                                 <div class="flex-container"> 
-                <section class="contactform1">
+                <section class="contactform1" id="contact">
                     <h2>Contact me</h2>
                     <p>If you have an application you are interested in developing, a feature that you need built or a 
                         project that needs coding. I'd love to help with it </p>
@@ -232,5 +244,6 @@
                     </nav>
                 </section>
             </div>
+            <script src="index.js"></script>
             </body>
     </html>
