--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     </section>
 
     <!--for popup-->
-    <div class="project1">
+    <div class="popup">
+    <!-- <div class="project1">
         <h2>Tonic</h2>
         <img class="cancel" src="images/Icon.png" alt="cancel">
         <ul class="list1">
@@ -104,7 +105,8 @@
                 <button type="button" class="button2">See Source <img src="images/Vector-popup.png" alt="github"></button>
             </div>
         </div>
-    </div> 
+    </div> -->
+    </div>
 
 
         <!--for mobile and desktop version-->
