--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        crossorigin="anonymous" referrerpolicy="no-referrer"/>
 </head>
 
 <body>
@@ -158,7 +158,7 @@
                 <p>If you have an application you are interested in developing, a feature that you need built or a
                     project that needs coding. I'd love to help with it </p>
                 <nav>
-                    <form id="form" action="https://formspree.io/f/xrgjovwd" method="post">
+                    <form id="form" action="https://formspree.io/f/mzbwqkdj" method="post">
                         <input type="text" id="name" placeholder="Yeramias" maxlength="30" required>
                         <input type="email" id="mail" name="email address" placeholder="natajayarijl4@gmail.com"
                             required>
