--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
     </div>
     <header class="header">
-        <a class="logo" href="#">My Logo</a>
+        <a class="logo" href="#">HI There</a>
         <nav class="nav">
             <img class="ham" id="ham" src="images/menu-icon.svg" alt="menu">
             <ul class="navbar">
